<resources>
    <string name="app_name">Тимур.ко</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="surname">Фамилия</string>
    <string name="lastname">Имя</string>
    <string name="otchestvo">Отчество</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="phone">Ваш номер телефона</string>
    <string name="aboutMe">Расскажите о себе</string>
    <string name="youRegion">Ваша область</string>
    <string name="youDistrict">Ваш район</string>
    <string name="youCity">Ваш населенный пункт</string>

    <string name="signIn">Войти в существующий аккаунт</string>
    <string name="signInVerb">Войти</string>
    <string name="auth">Авторизоваться</string>
    <string name="needAuth">Необходимо зайти в профиль</string>
    <string name="invalidLogin">Неверный логин и пароль</string>
    <string name="messageInvalidLogin">Если вы не зарегистрированы нажмите ЗАРЕГИСТРИРОВАТЬСЯ</string>

    <string name="signUp">Регистрация</string>
    <string name="signUpVerb">Зарегистрироваться</string>
    <string name="editProfileUser">Сохранить изменения</string>

    <string name="continueString">Продолжить</string>
    <string name="cancel">Отмена</string>
    <string name="OK">ОК</string>
    <string name="exitDialog">Закрыть</string>
    <string name="dialogCancel">Для закрытия окна нажмите ОТМЕНА</string>
    <string name="empty">""</string>
    <string name="errorNetwork">Ошибка сети! Проверьте подключение!</string>
    <string name="noConnection">Нет подключения к серверу. Нажми ПОПРОБЫВАТЬ СНОВА, чтобы перезагрузить страницу</string>
    <string name="errorServer">Ошибка сервера</string>
    <string name="serverFailedData">Серверу не удалось обработать результат!</string>
    <string name="notFoundedLabel">Ресурс не найден</string>
    <string name="notFoundedMes">Возможно ссылка на данный ресурс остутствует!</string>
    <string name="timeoutConnection">Медленное интернет соединение</string>
    <string name="again">Повторите действие!</string>
    <string name="refreshApp">Попробывать снова</string>
    <string name="exitApp">Выйти</string>

    <style name="unknownInfo">Неизвестно</style>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>