<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_secondary"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="ifContentScrolls"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25sp"
                    android:layout_marginBottom="30sp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/flamingo"
                    android:textSize="42sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:gravity="center"
                    android:text="@string/signUp"
                    android:textSize="32sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="13sp"
                    android:layout_marginBottom="10sp"
                    android:hint="@string/surname"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userlastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="13sp"
                    android:layout_marginBottom="10sp"
                    android:hint="@string/lastname"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userfirstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="13sp"
                    android:layout_marginBottom="10sp"
                    android:hint="@string/otchestvo"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userpatronymic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="13sp"
                    android:layout_marginBottom="10sp"
                    android:padding="15sp"
                    android:text="@string/continueString" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="25sp"
                    android:text="@string/signIn"
                    android:textColor="@color/link"
                    android:textSize="16sp"
                    android:onClick="goAuthActivity"
                    />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        >-->
<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="?attr/actionBarSize"-->
<!--            android:background="@color/white"-->
<!--            app:layout_collapseMode="pin"-->
<!--            app:layout_scrollFlags="enterAlways">-->
<!--&lt;!&ndash;            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">&ndash;&gt;-->
<!--                <TextView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:gravity="center_horizontal"-->
<!--                    android:paddingBottom="25sp"-->
<!--                    android:text="Войти в существующий профиль"-->
<!--                    android:textColor="@color/link"-->
<!--                    android:textSize="16sp"-->

<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    />-->
<!--        </androidx.appcompat.widget.Toolbar>-->
<!--    </com.google.android.material.appbar.AppBarLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>

